# DodoVoxelEngine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: array_utils.hpp  camera.hpp  cube.hpp  macros.hpp  mesh.hpp  obj.hpp  render.hpp  shader.hpp  texture.hpp  voxmesh.hpp  voxobj.hpp
shaders/: stdfrag.frag
src/: array_utils.cpp  cube.cpp  main.cpp  mesh.cpp  obj.cpp  render.cpp  texture.cpp  voxmesh.cpp  voxobj.cpp
